# mcp-ckan

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
deploy/: tool_sources.sample.yaml
deploy/keys/: README.md
simple-ckan-mcp-server-test/: README.md  main.py
simple-mcp-server-test/: .env.sample  .flake8  .gitignore  README.md  requirements.txt  test_http_direct.py  test_mcp.py  test_mcp_client.py  test_remote_mcp.py  tool_sources.sample.yaml  tool_sources.yaml
simple-mcp-server-test/deploy/: mcp-supervisor.conf
simple-mcp-server-test/deploy/nginx/: mcp-server.conf  mcp.whoare.io.conf
simple-mcp-server-test/keys/: README.md
simple-mcp-server-test/scripts/: fetch_remote_tools.py
simple-mcp-server-test/src/: server.py
simple-mcp-server-test/src/keys/: README.md
simple-mcp-server-test/src/tools/: README.md  __init__.py  bcie_disbursements.py  bcie_loans.py
src/mcp_server/: __init__.py  registry.py  server.py  settings.py
src/mcp_server/engines/: README.md  __init__.py  aggregate_engine.py  row_list_engine.py  top_row_engine.py  unique_values_engine.py
src/mcp_server/lib/: remote_tools.py
src/mcp_server/scripts/: fetch_remote_tools.py
src/mcp_server/tools/: __init__.py  example_tool.py
tests/: test_engine_separator.py  test_engines.py  test_http.py  test_plugin_loading.py  test_server.py  test_stdio.py
tests/fixtures/data/: projects.csv  projects_semicolon.csv
tests/fixtures/tools/: aggregate_projects.yaml  example_tool.py  row_list_projects.yaml  separator_test.yaml  top_row_projects.yaml  unique_values_projects.yaml
(+6 files in other folders)
